# SemanticSegmentation

./: .gitignore  README.md  pyproject.toml
data/raw/test-images/: README.md
src/: SVM_Classification.ipynb  SemanticSegmentation.ipynb  datasetDownloader.py  label_full_kmeans.py  label_single_kmeans.py  main.py  segment_full_slic.py  segment_multi_slic.py  segment_single_slic.py  slic_benchmark.py  slic_segment.py
src/classification/: SVM_label.py  superpixel_features.py
src/kmeans/: kmeans.py
src/labeling/: image_load_util.py  image_save_util.py
src/segmentation/: Makefile  cluster.cu  cluster.h  clusterCenters.cu  clusterCenters.h  cluster_centers.cu  cluster_centers.h  cluster_error.cu  cluster_error.h  compile_slic.sh  connectivity.cu  connectivity.h  pixelClusterAssignment.cu  pixelClusterAssignment.h  pixel_assignment.cu  pixel_assignment.h  rgb_to_lab.cu  rgb_to_lab.h  slic.cu  slic.h  slic.py  types.h
src/segmentation/include/: cluster.h  cluster_error.h  connectivity.h  pixel_assignment.h  rgb_to_lab.h  slic.h
src/segmentation/src/: cluster.cu  cluster_error.cu  connectivity.cu  pixel_assignment.cu  rgb_to_lab.cu  slic.cu
src/utils/: segmentation_utils.py  serialize.py
