[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SemanticSegmentation"
version = "0.1.0"
authors = [{name = "Christian Baker-Davidson | Aidan Morris | Beth Ralston | Rory Hazlett"}]
description = "A python implementation of semantic segmentation."
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-image",
    "opencv-python",
    "Pillow",
    "scikit-learn",
    "tqdm",
    "joblib",
    "pytest"
]
